fix: updated database access, replaced DB file, and added jackson dependency in pom file; minor changes in CurrencyDao and CurrencyService classes